[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/robotArm.png" type="Texture" id=1]
[ext_resource path="res://parts/partParents/ArmParent.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -45.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 0.3, 3.7, 0.07 ),
"update": 0,
"values": [ 45.0, -45.0, 108.0, 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 0.3, 3.7, 0.07 ),
"update": 0,
"values": [ -45.0, 45.0, -108.0, -45.0 ]
}

[node name="Arm Name" type="Node2D"]
script = ExtResource( 2 )
arm_texture = ExtResource( 1 )
sprite_offset = Vector2( 4, -6 )

[node name="Sprite1" type="Sprite" parent="."]
show_behind_parent = true
rotation = 0.785398
texture = ExtResource( 1 )
offset = Vector2( 4, -6 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
show_behind_parent = true
rotation = -0.785398
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( -4, -6 )
flip_h = true

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
